--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,20 +6,23 @@
 
 <ion-content>
   <div class="login-container">
-    <form #userForm="ngForm"  (ngSubmit)="login()">
+    <form [formGroup]="loginForm"  (ngSubmit)="login()">
       <ion-item>
+        <p class="error">{{authError}}</p>
         <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" [(ngModel)]="email" name="email"></ion-input>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
       <ion-item>
         
         <ion-label position="floating">Password</ion-label>
-        <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
+        <ion-input type="password" formControlName="password"></ion-input>
         
       </ion-item>
       
+
       <ion-button expand="block" type="submit">Login</ion-button>
       
+  
       </form>
   </div>
 </ion-content>
