--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,18 +1,99 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu type="reveal"  contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-content class="ion-padding">
+    <ion-list class="custom-item">
+      <ion-item>
+        <ion-label>Home</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>About Us</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Contact Us</ion-label>
+      </ion-item>
+      <ion-item (click)="next()">
+        <ion-label>Logout</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <div class="container">
+      <ion-card class="card">
+        <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Fissure in Sandstone"/>
+        <ion-card-header>
+          <ion-card-title>Dalnex</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          Here's a small text description <br>for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card> 
+    
+      <ion-card class="card">
+        <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
+        <ion-card-header>
+          <ion-card-title>Injection Module</ion-card-title>
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
+        <ion-card-content>
+          Here's a small text description <br>for the card content. Nothing more, nothing less.
+        </ion-card-content>
+        <ion-button class="btn" (click)="next()">More</ion-button>
+      </ion-card> 
+    
+      <ion-card class="card">
+        <img src="" class="img-fluid">
+        <ion-card-header>
+          <ion-card-title>Card 3</ion-card-title>
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
+        <ion-card-content>
+          Here's a small text description <br>for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card> 
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+      <ion-card color="primary">
+        <ion-card-header>
+          <ion-card-title>Card Title</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content> Card Content </ion-card-content>
+      </ion-card>
+      
+      <ion-card color="secondary">
+        <ion-card-header>
+          <ion-card-title>Card Title</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content> Card Content </ion-card-content>
+      </ion-card>
+      
+      <ion-card color="warning">
+        <ion-card-header>
+          <ion-card-title>Card Title</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content> Card Content </ion-card-content>
+      </ion-card>
+    
+    </div>
+  </ion-content>
+</div>
 
-</ion-content>
+
