--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,10 @@
   </ion-header>
   <ion-content class="ion-padding">
     <ion-list class="custom-item">
-      <ion-item>
+      <ion-item *ngFor="let p of pages">
+        {{p}}
+      </ion-item>
+      <!-- <ion-item>
         <ion-label>Home</ion-label>
       </ion-item>
       <ion-item>
@@ -17,7 +20,7 @@
       </ion-item>
       <ion-item (click)="next()">
         <ion-label>Logout</ion-label>
-      </ion-item>
+      </ion-item> -->
     </ion-list>
   </ion-content>
 </ion-menu>
@@ -82,7 +85,7 @@
       
         <ion-card-content> Card Content </ion-card-content>
       </ion-card>
-      
+
       <ion-card color="warning">
         <ion-card-header>
           <ion-card-title>Card Title</ion-card-title>
