--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,11 +5,17 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-list class="custom-item">
-      <ion-item *ngFor="let p of pages">
-        {{p}}
-      </ion-item>
-      <!-- <ion-item>
+    <ion-item button (click)="toggleAboutUs()">
+      <ion-label>About Us</ion-label>
+      <ion-icon slot="end" [name]="aboutUsOpen ? 'chevron-up' : 'chevron-down'"></ion-icon>
+    </ion-item>
+    <ion-item *ngIf="aboutUsOpen">
+      <ion-label>History</ion-label>
+    </ion-item>
+    <ion-item *ngIf="aboutUsOpen">
+      <ion-label>Team</ion-label>
+    </ion-item> 
+    <!-- <ion-item>
         <ion-label>Home</ion-label>
       </ion-item>
       <ion-item>
@@ -18,10 +24,9 @@
       <ion-item>
         <ion-label>Contact Us</ion-label>
       </ion-item>
-      <ion-item (click)="next()">
+      <ion-item (click)="next()" class="custom-item">
         <ion-label>Logout</ion-label>
       </ion-item> -->
-    </ion-list>
   </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
@@ -34,68 +39,6 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <div class="container">
-      <ion-card class="card">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Fissure in Sandstone"/>
-        <ion-card-header>
-          <ion-card-title>Dalnex</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          Here's a small text description <br>for the card content. Nothing more, nothing less.
-        </ion-card-content>
-      </ion-card> 
-    
-      <ion-card class="card">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
-        <ion-card-header>
-          <ion-card-title>Injection Module</ion-card-title>
-          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-        </ion-card-header>
-        <ion-card-content>
-          Here's a small text description <br>for the card content. Nothing more, nothing less.
-        </ion-card-content>
-        <ion-button class="btn" (click)="next()">More</ion-button>
-      </ion-card> 
-    
-      <ion-card class="card">
-        <img src="" class="img-fluid">
-        <ion-card-header>
-          <ion-card-title>Card 3</ion-card-title>
-          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-        </ion-card-header>
-        <ion-card-content>
-          Here's a small text description <br>for the card content. Nothing more, nothing less.
-        </ion-card-content>
-      </ion-card> 
-
-      <ion-card color="primary">
-        <ion-card-header>
-          <ion-card-title>Card Title</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content> Card Content </ion-card-content>
-      </ion-card>
-      
-      <ion-card color="secondary">
-        <ion-card-header>
-          <ion-card-title>Card Title</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content> Card Content </ion-card-content>
-      </ion-card>
-
-      <ion-card color="warning">
-        <ion-card-header>
-          <ion-card-title>Card Title</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content> Card Content </ion-card-content>
-      </ion-card>
-    
-    </div>
   </ion-content>
 </div>
 
