--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,20 +1,18 @@
-<ion-menu type="reveal"  contentId="main-content">
+<ion-menu type="push"  contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-item button (click)="toggleAboutUs()">
-      <ion-label>About Us</ion-label>
-      <ion-icon slot="end" [name]="aboutUsOpen ? 'chevron-up' : 'chevron-down'"></ion-icon>
+    <ion-item button (click)="toggleDashboard()">
+      <ion-label>Dashboard</ion-label>
+      <ion-icon slot="end" [name]="dashBoard ? 'chevron-up' : 'chevron-down'"></ion-icon>
     </ion-item>
-    <ion-item *ngIf="aboutUsOpen">
-      <ion-label>History</ion-label>
+    <ion-item *ngIf="dashBoard">
+      <ion-label class="custom-item">Shop Item</ion-label>
     </ion-item>
-    <ion-item *ngIf="aboutUsOpen">
-      <ion-label>Team</ion-label>
-    </ion-item> 
+     
     <!-- <ion-item>
         <ion-label>Home</ion-label>
       </ion-item>
